# PyPRLedger

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitignore.new  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  FastAPI_code_review_system_design.md  LICENSE  MULTI_REVIEWER_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_STATUS.md  RELEASE_PREPARATION.md  SKILL.md  alembic.ini  check_bob_permissions.py  docker-compose.yml  fix_review_admin_permissions.py  init.sql  main.py  migrate_review_data.py  prometheus.yml  pyproject.toml  ruff.toml  test_cors.py
.opencode/skills/: release.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_business_key_columns.py  002_add_repository_id_integer.py  002_create_project_registry.py  003_add_pull_request_commit_id.py  003_change_score_to_float.py  003_remove_database_id_columns.py  004_enhance_pull_request_review.py  004_refactor_score_to_separate_table.py  005_add_active_and_deletion_tracking_to_score.py  005_add_repository_id_to_repository.py  005_add_user_id_column.py  006_create_auth_and_rbac_tables.py  007_add_assign_permission.py  008_add_assignment_tracking.py  009_add_delegation_support.py  010_add_manage_roles_to_review_admin.py  011_refactor_review_multi_reviewer.py  012_fix_review_admin_assign_permission.py  013_add_project_registry_permissions.py  014_add_ai_review_id_column.py  015_create_system_settings_table.py
docs/: DEPLOYMENT_GUIDE.md  FastAPI_code_review_system_design.md  INDEX.md  OFFLINE_DEPLOYMENT.md  PHASE1-3_VERIFICATION.md  PHASE4_PLAN.md  PRE_COMMIT_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_VERSION_REFERENCE.md  README.md  VERSIONING.md  VERSION_MANAGEMENT_SUMMARY.md  VUE_PROJECT_VERIFICATION_AND_OPTIMIZATION.md  phase3_1_role_task_assignment.md  phase4_notification.md
docs/features/: phase1_auth_rbac_audit.md  phase2_vue_refactoring.md  phase3_1_role_task_assignment.md  phase3_2_user_role_delegation.md  phase3_vue_auth_audit.md
frontend/: .dockerignore  .env.prod  .env.production  .env.test  .gitignore  Dockerfile  ENVIRONMENTS.md  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  session-revoke.spec.ts
frontend/public/: README_ICONS.md  robots.txt
frontend/src/: App.vue  i18n.ts  main.ts  style.css
frontend/tests/: setup.ts
requirements/: base.txt  dev.txt  prod.txt
scripts/: bump_version.py  cleanup_database.py  review_ui.html  seed_fake_reviews.py  seed_mock_data_for_test.py  seed_reviews_test_data.py  test_i18n.py  test_iterations.py  test_multiple_reviewers.sh  test_review_iteration.sh  update_diff2html.sh  validate_commit_msg.py
scripts/deployment/: clear_cache.py
scripts/housekeeping/: clear_cache.py  clear_database.py
src/: __init__.py  main.py
src/api/: __init__.py
src/conf/: LOGGING_GUIDE.md  logging.yaml
src/core/: config.py  database.py  exceptions.py  middleware.py  permissions.py  score_config.py
src/locales/: en.json  zh-CN.json  zh-TW.json
src/models/: __init__.py  audit_log.py  auth_user.py  organization.py  project.py  project_registry.py  (+7 more)
tests/: conftest.py  test_delegation.py  test_review_visibility.py
web/: README.md  index.html
(+133 files in other folders)
